2007-02-07  Andrew Cagney  <cagney@redhat.com>

	* expr/20061115-2.c, expr/20061115-1.c: Delete. Merged into
	frysk-core/frysk/pkglibdir/hpd-c.c.
	* expr/CppParser.exp: Delete.  Replaced by JUnit based ExpUnit
	test in frysk-core/frysk/bindir/.

	* util/fcore.exp, util/fstack.exp: Delete.  Replaced by JUnit
	based ExpUnit tests in frysk-core/frysk/bindir/.

2006-12-23  Nurdin Premji <npremji@redhat.com>

	* expr/CppParser.exp (where): Removed space between # and 0.

2006-12-21  Stan Cox  <scox@redhat.com>

	* expr/CppParser.exp (hpd_path): Change from hpd to fhpd.

2006-12-20  Stan Cox  <scox@redhat.com>

	* expr/CppParser.exp (hpd_path): New for install tree testing.
	* util/fcore.exp (funit_path, fcore_path): Likewise.
	* util/fstack.exp (funit_path, fstack_path): Likewise.

2006-12-20  Nurdin Premji  <npremji@redhat.com>

	* util/fcore.exp: Changed to resemble console option changes.

2006-12-19  Nurdin Premji  <npremji@redhat.com>

	* util/fcore.exp (test_fcore_bad_argument): Changed re to match change 
	in fcore.
	
	* util/fcore.exp: Switched to long logging options, short options no 
	longer supported.

2006-12-15  Stan Cox  <scox@redhat.com>

	* expr/20061115-2.c: Simplify.

2006-12-15  Phil Muldoon  <pmuldoon@redhat.com>

	* util/fcore.exp: New File.
	Add extra tests.

2006-12-14  Nurdin Premji <npremji@redhat.com>

	* util/fstack.exp: Commented.

	* util/fstack.exp: Removed unneccessary " wrappings

	* util/fstack.exp: Changed [0-9a-f] to [[:xdigit:]]

	* util/fstack.exp: New file.

2006-12-14  Stan Cox  <scox@redhat.com>

	* expr/20061115-2.c (assign_char, assign_long, assign_char_arr): New.
	* expr/20061115-1.c (loop_2): Use it.
	* expr/CppParser.exp: Test it.

2005-11-15  Stan Cox  <scox@redhat.com>

	* lib/frysk.exp: New file.
	* expr/CppParser.exp: Use it.
	* expr/20061115-1.c: New file.
	* expr/20061115-2.c: New file.

2005-09-09  Andrew Cagney  <cagney@redhat.com>

	* expr/CppParser.exp: Update to match com.redhat.fedora.frysk to
	frysk reorg.
