@@ -1,5 +1,7 @@
 2007-02-07  Andrew Cagney  <cagney@redhat.com>
 
+	* lib/frysk.exp: Delete.
+
 	* expr/20061115-2.c, expr/20061115-1.c: Delete. Merged into
 	frysk-core/frysk/pkglibdir/hpd-c.c.
 	* expr/CppParser.exp: Delete.  Replaced by JUnit based ExpUnit
